--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+8version: '2'
 services:
   db_data:
     image: busybox
@@ -39,3 +39,4 @@ services:
       - "3000:3000"
     depends_on:
       - db
+
